--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
     "next": "^13.4.19",
+    "next-intl": "^3.0.0-beta.15",
     "postcss": "^8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "tailwind-fluid-typography": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "tmdb-ts": "^1.4.0",
+    "tmdb-ts-wrapper": "^1.0.0",
     "typescript": "^5.2.2"
   }
 }
