--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,18 +2,36 @@
   "cSpell.words": ["tailwindcss", "tmdb"],
   "cSpell.enableFiletypes": ["tailwindcss"],
   "cSpell.ignoreWords": [
+    "Fpage",
+    "alibris",
     "antd",
+    "backreferences",
+    "barcodes",
+    "browseable",
     "cssinjs",
     "fakeimg",
     "flatrate",
     "flowbite",
+    "fulltext",
+    "goodreads",
     "imdb",
+    "internetarchi",
     "justwatch",
+    "lccn",
+    "lendable",
+    "librarything",
+    "librivox",
     "nextui",
+    "ocaid",
+    "openlibrary",
+    "pagenum",
+    "previewable",
+    "printdisabled",
     "toolcool",
     "tvseries",
     "tvshow",
     "tvshows",
+    "waitlist",
     "watchlist",
     "webp"
   ],
