--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "^10.4.15",
     "drizzle-orm": "^0.30.6",
     "eslint": "^8.48.0",
     "eslint-config-next": "^14.1.4",
     "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "next-intl": "^3.10.0",
-    "postcss": "^8.4.28",
     "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,11 +28,13 @@
     "sharp": "^0.32.5",
     "tailwind-fluid-typography": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "3.3.3",
     "typescript": "^5.2.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.20.14"
+    "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.20.14",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
